# metodos-de-busca

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
metodos_de_busca/: cidade.py  mapa.py
metodos_de_busca/buscas/: __init__.py  a_estrela.py  busca.py  custo_uniforme.py  gulosa.py  largura.py  profunda.py  resultado.py
metodos_de_busca/metricas/: __init__.py  resultado.py  tempo.py
metodos_de_busca/sociedade/: __init__.py  cidade.py  mapa.py
metodos_de_busca/tests/: test_buscas.py
metodos_de_busca/tests/snapshots/: snap_test_buscas.py
src/: cidade.py  cidade_mapa.py  cidades.py  main.py  mapa.py
src/buscas/: __init__.py  a_estrela.py  busca.py  custo_uniforme.py  gulosa.py  largura.py  profunda.py  resultado.py
